tests/ui/on-unimplemented/format_specs.stderr
error[E0277]: normal: Trait, path: Trait<'lifetime, CONST_GENERIC, A, B>,  resolved: Trait<'_, 6, u8, _>
  --> $DIR/format_specs.rs:11:16
   |
LL |     take_trait(());
   |     ---------- ^^ the trait `Trait<'_, 6, u8, _>` is not implemented for `()`
   |     |
   |     required by a bound introduced by this call
   |
help: this trait has no implementations, consider adding one
  --> $DIR/format_specs.rs:6:1
   |
LL | pub trait Trait<'lifetime, const CONST_GENERIC: usize, A, B> where A: Send {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `take_trait`
  --> $DIR/format_specs.rs:8:22
   |
LL | fn take_trait<'a, T: Trait<'a, 6, u8, U>, U>(_: T) {}
   |                      ^^^^^^^^^^^^^^^^^^^ required by this bound in `take_trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
